--- a/index.html
+++ b/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
-    <link rel="stylesheet" href="css/style.css">
+		<meta charset="UTF-8">
+		<title>Effective JavaScript: Frogger</title>
+		<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!--header-->
     <div class ="header">
-        <h1> ARCADE GAME</h1>
-    </div>
-    <!--Game overlay-->
-    <div class = "overlay"></div>
+            <h1> ARCADE GAME</h1>
+        </div>
+        <!--Instructions on how to play game-->
+		<div class="instructions">
+				<h1 class="heading">Instructions</h1>
+				<p class="simple-text">Use the arrow keys to move the player. Reach the water line to win
+				the game.Don't collide with the bugs! Then you have to start
+				over again!</p>
+				<button class="button" id="restart">Play again!</button>
+        </div>
+        
+		<!--modal for congratulations-->
+		<div class="modal">
+			<div class="modal-content">
+					<h1 class="heading">Congratulations!!!! You won! Do you want to play again?</h1>
+                    <button class="button" id="restart-modal">Play again!</button>
+            </div>  
+        </div>
 
-    <!--modal for the game-->
-    <div class = "start-game">
-        <h1>Welcome to Frogger Game</h1>
-        <h2>Instructions</h2>
-        <p>Use your arrow keys to move the player: up, own, left, right. Ensure your player and bugs do not collide. You will loose 30 points</p>
-        <h3>To Win</h3>
-        <p>Try to get to the water blocks at the top to win game</p>
-        <h4>You only have 4 lives. All the best!</h4>
-        <button onclick = "startGame()">Click to play</button>
-    </div>
-
-    <!--Modal for when the player wins the game-->
-    <div class = "winner">
-        <h1> You are a winner</h1>
-        <p>Congratulations!!! You won</p>
-        <h3>Play again</h3>
-        <button onclick = "resetGame()">Play Again</button>
-    </div>
-    <!--Modal for when the player looses all lives-->
-    <div class = "game-over">
-        <h1>Game over</h1>
-        <p>You lost all 3 lives</p>
-        <h3>Play again to win</h3>
-        <button onclick = "resetGame()">Play again</button>
-    </div>
-
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+		<script src="js/resources.js"></script>
+		<script src="js/app.js"></script>
+		<script src="js/engine.js"></script>
 </body>
-</html>
+</html
